--- a/modules/application-health.adoc
+++ b/modules/application-health.adoc
@@ -41,7 +41,7 @@ instances to the service until they pass the readiness checks, and will ensure
 that unhealthy instances are restarted (if they fail the liveness checks).
 
 Click *Applications* &rarr; *Deployments* on the left-side bar. Click
-`nationalparks`. You will see the warning about health checks, with a link to
+`nationalparks` and finally 'configuration'. You will see the warning about health checks, with a link to
 click in order to add them. Click *Add health checks* now.
 
 You will want to click both *Add Readiness Probe* and *Add Liveness Probe* and
