--- a/modules/deploy-openshift.adoc
+++ b/modules/deploy-openshift.adoc
@@ -57,7 +57,6 @@ oc cluster up --public-hostname=workshop.${STUDENT}.rhtps.io \
 [source]
 ----
 oc cluster up \
-oc cluster up \
    --public-hostname=workshop.${STUDENT}.rhtps.io \ <1>
    --routing-suffix=apps.ose.${STUDENT}.rhtps.io \ <2>
    --host-pv-dir=/data \ <3>
@@ -102,88 +101,5 @@ oc cluster up \
 
 === Step 2:
 
-*Launch your first application.*
+*There is no step 2!*
 
-.see what user you are loged in as
-[source]
-----
-oc whoami
-----
-
-You should be logged in as `developer`
-
-Create a new
-https://docs.openshift.com/container-platform/3.5/architecture/core_concepts/projects_and_users.html[Project]
-for your first app.
-
-.create new project
-[source]
-----
-oc new-project flask --description="Python Flask App" --display-name="Flask App"
-----
-
-Now use the `new-app` command to create the new app from a simple Python flask
-repository on GitHub. By using the `--strategy=source` we can pass it the type
-of container to build and launch the app. In this case we are using
-`python:3.3`.
-
-.create the app
-[source]
-----
-oc new-app --strategy=source python:3.3~https://github.com/RedHatGov/DC17-Flask --name=dc17-flask
-----
-
-Now follow the logs as its being built.
-
-.follow the logs
-[source]
-----
-oc logs -f bc/dc17-flask
-----
-
-*Open a browser next to the terminal so you can see the app get created*
-
-=== Step 3:
-
-*Login to OpenShift*
-
-.Login as developer
-[source]
-----
-Username:  developer
-
-Password:  developer
-----
-
-.OpenShift Main Login
-image::login-origin.png[]
-
-Click on the new project you created `Flask App`.
-
-.Flask App
-image::flask-app.png[]
-
-Now we need to create a
-https://docs.openshift.com/container-platform/3.5/architecture/core_concepts/routes.html[`route`]
-to see the app.
-
-Click `Create Route` in the top right corner. Accept the defaults and click
-`create`.
-
-.create route
-image::create-route.png[]
-
-Now lets see your first app. Click the new route. It should look similar to
-this `http://dc17-flask-flask.apps.ose.0.rhtps.io`.
-
-image::route.png[]
-
-Congratulations! You have launched your first app in OpenShift!
-
-To recap:
-
-- You just launched OpenShift on AWS
-- You launched a containerized python app
-
-
-https://github.com/openshift/origin/blob/master/docs/cluster_up_down.md#specifying-images-to-use[oc guide]
