--- a/modules/scaling.adoc
+++ b/modules/scaling.adoc
@@ -27,35 +27,34 @@ In almost all cases, you will end up using the *Pod*, *Service*,
 *ReplicationController* and *DeploymentConfiguration* resources together. And, in
 almost all of those cases, OpenShift will create all of them for you.
 
-There are some edge cases where you might want some *Pods* and an *RC* without a *DC*
-or a *Service*, and others, so feel free to ask us about them after the labs.
-
 ### Exercise: Exploring Deployment-related Objects
 
 Now that we know the background of what a *ReplicatonController* and
 *DeploymentConfig* are, we can explore how they work and are related. Take a
 look at the *DeploymentConfig* (DC) that was created for you when you told
-OpenShift to stand up the `parksmap-py` image:
+OpenShift to stand up the `DC17-Flask` image:
 
 [source]
 ----
-oc get dc
 
-NAME       REVISION   DESIRED   CURRENT   TRIGGERED BY
-parksmap-py   1          1         1         config,image(parksmap-py:{{PARKSMAP_VERSION}})
+$ oc get dc
+NAME         REVISION   DESIRED   CURRENT   TRIGGERED BY
+dc17-flask   1          1         1         config,image(dc17-flask:latest)
+
 ----
 
 To get more details, we can look into the *ReplicationController* (*RC*).
 
 Take a look at the *ReplicationController* (RC) that was created for you when
-you told OpenShift to stand up the `parksmap-py` image:
+you told OpenShift to stand up the `DC17-Flask` image:
 
 [source]
 ----
-oc get rc
 
-NAME         DESIRED   CURRENT   READY     AGE
-parksmap-py-1   1         1         0         4h
+$ oc get rc
+NAME           DESIRED   CURRENT   AGE
+dc17-flask-1   1         1         16m
+
 ----
 
 This lets us know that, right now, we expect one *Pod* to be deployed
@@ -76,17 +75,22 @@ the *Pod* in the OpenShift web console on the overview page. It's your choice.
 
 [source]
 ----
-oc scale --replicas=2 dc/parksmap-py
+
+$ oc scale --replicas=2 dc/dc17-flask
+
+deploymentconfig "dc17-flask" scaled
+
 ----
 
 To verify that we changed the number of replicas, issue the following command:
 
 [source]
 ----
-oc get rc
 
-NAME         DESIRED   CURRENT   READY     AGE
-parksmap-py-1   2         2         0         4h
+$ oc get rc
+NAME           DESIRED   CURRENT   AGE
+dc17-flask-1   2         2         18m
+
 ----
 
 You can see that we now have 2 replicas. Let's verify the number of pods with
@@ -94,11 +98,13 @@ the `oc get pods` command:
 
 [source]
 ----
-oc get pods
 
-NAME               READY     STATUS    RESTARTS   AGE
-parksmap-py-1-8g6lb   1/1       Running   0          1m
-parksmap-py-1-hx0kv   1/1       Running   0          4h
+$ oc get pods
+NAME                 READY     STATUS      RESTARTS   AGE
+dc17-flask-1-9k8bl   1/1       Running     0          1m
+dc17-flask-1-build   0/1       Completed   0          21m
+dc17-flask-1-flb10   1/1       Running     0          18m
+
 ----
 
 And lastly, let's verify that the *Service* that we learned about in the
@@ -106,39 +112,35 @@ previous lab accurately reflects two endpoints:
 
 [source]
 ----
-oc describe svc parksmap-py
-----
 
-You will see something like the following output:
+$ oc describe svc dc17-flask
 
-[source]
-----
-Name:			parksmap-py
-Namespace:		{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}
-Labels:			app=parksmap-py
-Selector:		deploymentconfig=parksmap-py
+Name:			dc17-flask
+Namespace:		flask
+Labels:			app=dc17-flask
+Selector:		app=dc17-flask,deploymentconfig=dc17-flask
 Type:			ClusterIP
-IP:			172.30.169.213
+IP:			172.30.210.129
 Port:			8080-tcp	8080/TCP
-Endpoints:		10.1.0.5:8080,10.1.1.5:8080
+Endpoints:		10.129.0.68:8080,10.130.0.143:8080
 Session Affinity:	None
 No events.
+
 ----
+
 
 Another way to look at a *Service*'s endpoints is with the following:
 
 [source]
 ----
-oc get endpoints parksmap-py
+
+$ oc get endpoints dc17-flask
+
+NAME         ENDPOINTS                            AGE
+dc17-flask   10.129.0.68:8080,10.130.0.143:8080   23m
+
 ----
 
-And you will see something like the following:
-
-[source]
-----
-NAME       ENDPOINTS                                   AGE
-parksmap-py   10.1.0.5:8080,10.1.1.5:8080                 4h
-----
 
 Your IP addresses will likely be different, as each pod receives a unique IP
 within the OpenShift environment. The endpoint list is a quick way to see how
@@ -146,7 +148,7 @@ many pods are behind a service.
 
 You can also see that both *Pods* are running using the web console:
 
-image::/images/parksmap-py-scaled.png[Scaling]
+image::/images/openshift-flask-scaled.png[Scaled,800,align="center"]
 
 Overall, that's how simple it is to scale an application (*Pods* in a
 *Service*). Application scaling can happen extremely quickly because OpenShift
@@ -165,14 +167,23 @@ name. Then, do the following:
 
 [source]
 ----
-oc delete pod parksmap-py-1-hx0kv
+$ oc delete pod dc17-flask-1-9k8bl
+
+pod "dc17-flask-1-9k8bl" deleted
+
 ----
 
 Then, as fast as you can, do the following:
 
 [source]
 ----
-oc get pods
+
+$ oc get pods
+NAME                 READY     STATUS              RESTARTS   AGE
+dc17-flask-1-4vjx6   0/1       ContainerCreating   0          3s
+dc17-flask-1-build   0/1       Completed           0          27m
+dc17-flask-1-flb10   1/1       Running             0          24m
+
 ----
 
 Did you notice anything different? The names of the *Pods* are slightly changed.
@@ -186,7 +197,7 @@ insufficient, OpenShift also allows you to run a command inside the container in
 order to perform the check. That command could be a complicated script that uses
 any installed language.
 
-Based on these health checks, if OpenShift decided that our `parksmap-py`
+Based on these health checks, if OpenShift decided that our `dc17-flask`
 application instance wasn't alive, it would kill the instance and then restart
 it, always ensuring that the desired number of replicas was in place.
 
