--- a/modules/kernel-capabilities.adoc
+++ b/modules/kernel-capabilities.adoc
@@ -177,7 +177,7 @@ it should be blocked it when you run your container is production.
 
 `*fsetid*`
 
-The man page says "don’t clear set-user-ID and set-group-ID mode bits when a
+The man page says "don't clear set-user-ID and set-group-ID mode bits when a
 file is modified; set the set-group-ID bit for a file whose GID does not match
 the filesystem or any of the supplementary GIDs of the calling process."
 
