--- a/modules/pipelines.adoc
+++ b/modules/pipelines.adoc
@@ -89,3 +89,4 @@ To run this example:
 . Push a change to your fork of the nodejs-ex repository
 . Start the pipeline again. Go back to step 11 and repeat.
 
+image::/images/jenkins-pipeline-blue-green.png[Jenkins Blue-Green Pipeline]
