--- a/modules/simple-python.adoc
+++ b/modules/simple-python.adoc
@@ -67,7 +67,7 @@ Now we need to create a
 https://docs.openshift.com/container-platform/3.5/architecture/core_concepts/routes.html[`route`]
 to see the app.
 
-Click `Create Route` in the top right corner. Accept the defaults and click `create`.
+Click `Create Route`. Accept the defaults and click `create`.
 
 .create route
 image::/images/openshift-flask-create-route.png[Create Route,800,align="center"]
@@ -78,4 +78,3 @@ this `http://dc17-flask-flask.apps.ose.0.rhtps.io`.
 image::/images/openshift-flask-route.png[Flask Route,800,align="center"]
 
 Congratulations! You have launched your first app in OpenShift!
-
